# plit-tui

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
e2e/: run_tui_smoke.sh
src/: auth.rs  client.rs  lib.rs  main.rs  types.rs
src/actions/: mod.rs
src/components/: app.rs  mod.rs  utils.rs  xml.rs
src/components/ele/: activity_bar.rs  input_box.rs  message_list.rs  mod.rs  powerline_symbol.rs  powerline_tab.rs  tool_bar.rs
src/components/helpers/: hb_macros.rs  hb_utils.rs  height_buffer.rs  mod.rs  utils.rs
src/components/parsing/: xml.rs
src/middlewares/: api.rs  command.rs  debug.rs  keyboard.rs  mod.rs  websocket.rs
src/reducers/: chat.rs  command_bar.rs  commands.rs  console.rs  mod.rs  mode.rs
src/structs/: command_handler.rs  mod.rs
src/utils/: mod.rs
